# token-saver

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
examples/: demo.py
tests/: conftest.py  test_analyzer.py  test_client.py  test_compressor.py  test_overflow.py  test_static_analyzer.py  test_tokenizer.py
token_saver/: cli.py
token_saver/core/: analyzer.py  tokenizer.py
tsave/: __init__.py  cli.py  client.py
tsave/core/: compressor.py  overflow.py  static_analyzer.py
