[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "token-saver"
version = "0.1.0"
description = "Drop-in Anthropic client wrapper with token counting, cost analysis, and semantic compression"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
