[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tsave"
version = "0.1.1"
description = "Drop-in Anthropic client wrapper with token counting, cost analysis, and semantic compression"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
tsave = "token_saver.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["token_saver"]

[tool.pytest.ini_options]
testpaths = ["tests"]
