[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tsave"
version = "0.2.0"
description = "Drop-in Anthropic client wrapper with token counting, cost analysis, and semantic compression"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
tsave = "tsave.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["tsave"]

[tool.pytest.ini_options]
testpaths = ["tests"]
